[ADD][api/books] add API CRUD for books (GET ALL)
