# book-management-backend/internal/routers/book_routes.go
@@ -10,5 +10,6 @@ func RegisterBookRoutes(rg *gin.RouterGroup, handler *handlers.BookHandler) {
 	books := rg.Group("/books")
 	{
 		books.GET("/:id", handler.GetBookByID)
+		books.GET("", handler.GetAllBooks)
 	}
 }
